Bug 519502 - Cloning a panel with standalone desktop files makes them unusable
Summary: Cloning a panel with standalone desktop files makes them unusable
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.6.80
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-04-28 01:28 UTC by Antti Savolainen
Modified: 2026-05-14 17:45 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.6
Sentry Crash Report:


Attachments
Example of the cloned desktop files (5.39 KB, image/jxl)
2026-04-28 01:28 UTC, Antti Savolainen
Details
Dragging .desktop to panel (39.77 KB, video/webm)
2026-05-11 23:35 UTC, Antti Savolainen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Antti Savolainen 2026-04-28 01:28:34 UTC
Created attachment 191858 [details]
Example of the cloned desktop files

SUMMARY
If I have desktop files dragged to an area outside a taskbar like withing a margins area, they don't get copied when a panel gets copied

STEPS TO REPRODUCE
1. Drag application entries as standalone into a panel
2. Clone the panel

OBSERVED RESULT
The desktop files now become unusable

EXPECTED RESULT
The desktop files should get copied along

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.6.4
KDE Frameworks Version: 6.25.0
Qt Version: 6.11.0
Kernel Version: 6.19.14-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 2600 Six-Core Processor
Memory: 64 GiB of RAM (62.7 GiB usable)
Graphics Processor: AMD Radeon RX 5700
Comment 1 TraceyC 2026-05-11 20:58:53 UTC
I'm can reproduce this with Plasma built from git-master, by dragging an icon from the menu to the panel
It does not reproduce with a .desktop file on the desktop dragged to the panel
Comment 2 Antti Savolainen 2026-05-11 23:35:20 UTC
Created attachment 192207 [details]
Dragging .desktop to panel

Odd. It does for me.
Comment 3 Marco Martin 2026-05-12 12:42:09 UTC
i can reproduce, but after restarting plasma, the icons are correct
Comment 4 Bug Janitor Service 2026-05-12 13:22:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6575
Comment 5 Marco Martin 2026-05-12 15:05:20 UTC
Git commit feee45d0a84ea1b96ad2061890fbb97662aa5b2e by Marco Martin.
Committed on 12/05/2026 at 15:05.
Pushed by mart into branch 'master'.

ShellCorona: Call configChanged() on each applet after cloning the panel

C++ applets that read the config with kconfiggroup instead of the
kconfigskeleton, need configChanged() to be called after anything
touches their config file. this will make them read it again and
adapt to the config changes

### Test plan

Add icon applets in a panel (either creating a new empty panel or
adding them to an existing panel by drag and drop from kickoff)
clone it in panel edit mode and it should have the correct icons
(clicking on them should launch the right app as well)

### Bugs fixed

M  +1    -0    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/feee45d0a84ea1b96ad2061890fbb97662aa5b2e
Comment 6 Marco Martin 2026-05-12 15:06:35 UTC
Git commit d3bc6cc43499bcb41132199e99e427a9ab466b29 by Marco Martin.
Committed on 12/05/2026 at 15:05.
Pushed by mart into branch 'Plasma/6.6'.

ShellCorona: Call configChanged() on each applet after cloning the panel

C++ applets that read the config with kconfiggroup instead of the
kconfigskeleton, need configChanged() to be called after anything
touches their config file. this will make them read it again and
adapt to the config changes

### Test plan

Add icon applets in a panel (either creating a new empty panel or
adding them to an existing panel by drag and drop from kickoff)
clone it in panel edit mode and it should have the correct icons
(clicking on them should launch the right app as well)

### Bugs fixed


(cherry picked from commit feee45d0a84ea1b96ad2061890fbb97662aa5b2e)

72f6d08e ShellCorona: Call configChanged() on each applet after cloning the panel

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +1    -0    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/d3bc6cc43499bcb41132199e99e427a9ab466b29