ShellCorona: Call configChanged() on each applet after cloning the panel

C++ applets that read the config with kconfiggroup instead of the
kconfigskeleton, need configChanged() to be called after anything
touches their config file. this will make them read it again and
adapt to the config changes

### Test plan

Add icon applets in a panel (either creating a new empty panel or
adding them to an existing panel by drag and drop from kickoff)
clone it in panel edit mode and it should have the correct icons
(clicking on them should launch the right app as well)

### Bugs fixed

BUG:519502