shell/shellcorona.cpp
@@ -2482,6 +2482,7 @@ void ShellCorona::clonePanelTo(PanelView *oldPanelView, Plasma::Types::Location 
             }
         }
         oldAppletConfig.deleteGroup();
+        newApplet->configChanged();
     }
 
     targetGeneralConfig.writeEntry("AppletOrder", appletsOrderList.join(QStringLiteral(";")));
